Icon button and more improvements.

--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@babel/preset-env": "^7.5.4",
     "@material/button": "^3.0.0",
     "@material/fab": "^3.0.0",
+    "@material/icon-button": "^3.0.0",
     "@material/ripple": "^3.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "svelte": "^3.6.7",
     "svelte-loader": "^2.13.5",
+    "svelte-preprocess": "^2.14.4",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.6"
   }
