--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material/button": "^3.0.0",
     "@material/card": "^3.0.0",
     "@material/chips": "^3.0.0",
+    "@material/dialog": "^3.0.0",
     "@material/fab": "^3.0.0",
     "@material/icon-button": "^3.0.0",
     "@material/ripple": "^3.0.0",
