--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@material/fab": "^3.0.0",
     "@material/form-field": "^3.0.0",
     "@material/icon-button": "^3.0.0",
+    "@material/linear-progress": "^3.1.0",
     "@material/list": "^3.0.0",
     "@material/menu": "^3.1.0",
     "@material/menu-surface": "^3.0.0",
