--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@material/menu-surface": "^3.1.0",
     "@material/radio": "^3.1.0",
     "@material/ripple": "^3.1.0",
+    "@material/slider": "^3.1.0",
     "@material/switch": "^3.1.0",
     "@material/typography": "^3.1.0"
   },
