Floating label, line ripple, and notched outline.

--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@material/dialog": "^3.1.0",
     "@material/drawer": "^3.1.0",
     "@material/fab": "^3.1.0",
+    "@material/floating-label": "^3.1.0",
     "@material/form-field": "^3.1.0",
     "@material/icon-button": "^3.1.0",
+    "@material/line-ripple": "^3.1.0",
     "@material/linear-progress": "^3.1.0",
     "@material/list": "^3.1.0",
     "@material/menu": "^3.1.0",
     "@material/menu-surface": "^3.1.0",
+    "@material/notched-outline": "^3.1.0",
     "@material/radio": "^3.1.0",
     "@material/ripple": "^3.1.0",
     "@material/slider": "^3.1.0",
