--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "svelte": "^3.6.9",
     "svelte-loader": "^2.13.6",
     "svelte-preprocess": "^2.15.0",
+    "svelte-spa-router": "^1.2.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
   }
