--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^7.2.0",
     "serve": "^11.1.0",
     "style-loader": "^1.0.0",
