--- a/package.json
+++ b/package.json
@@ -60,5 +60,6 @@
     "@material/theme": "^3.1.0",
     "@material/top-app-bar": "^3.1.0",
     "@material/typography": "^3.1.0"
-  }
+  },
+  "devDependencies": {}
 }
