--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "@material/textfield": "^3.1.0",
     "@material/theme": "^3.1.0",
     "@material/top-app-bar": "^3.1.0",
-    "@material/typography": "^3.1.0"
+    "@material/typography": "^3.1.0",
+    "svelte": "^3.9.0"
   },
   "devDependencies": {}
 }
