--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^7.2.0",
+    "sass-loader": "^7.3.1",
     "serve": "^11.1.0",
     "style-loader": "^1.0.0",
-    "svelte": "^3.8.1",
+    "svelte": "^3.9.0",
     "svelte-loader": "^2.13.6",
-    "svelte-material-ui": "^1.0.0-alpha.14",
+    "svelte-material-ui": "file:../svelte-material-ui",
     "svelte-spa-router": "^1.2.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
