--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-material-ui",
-  "version": "1.0.0-alpha.14",
+  "version": "1.0.0-beta.1",
   "description": "Svelte Material UI Components",
   "keywords": [
     "svelte",
