--- a/packages/notched-outline/package.json
+++ b/packages/notched-outline/package.json
@@ -14,6 +14,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hperrin/svelte-material-ui.git"
