--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "@svelte-material-ui/card": "^1.0.0-beta.3",
     "@svelte-material-ui/checkbox": "^1.0.0-beta.3",
     "@svelte-material-ui/chips": "^1.0.0-beta.3",
-    "@svelte-material-ui/data-table": "^3.1.1",
+    "@svelte-material-ui/data-table": "^1.0.0-beta.3",
     "@svelte-material-ui/dialog": "^1.0.0-beta.3",
-    "@svelte-material-ui/drawer": "^3.1.1",
+    "@svelte-material-ui/drawer": "^1.0.0-beta.3",
     "@svelte-material-ui/fab": "^1.0.0-beta.3",
     "@svelte-material-ui/floating-label": "^1.0.0-beta.3",
     "@svelte-material-ui/form-field": "^1.0.0-beta.3",
