--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@svelte-material-ui/button",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.5",
   "description": "Svelte Material UI - Button",
   "keywords": [
     "svelte",
@@ -27,9 +27,9 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@svelte-material-ui/common": "^1.0.0-beta.3",
     "@material/button": "^3.1.0",
     "@material/elevation": "^3.1.0",
-    "@material/feature-targeting": "^3.1.0"
+    "@material/feature-targeting": "^3.1.0",
+    "@svelte-material-ui/common": "^1.0.0-beta.5"
   }
 }
