--- a/packages/paper/package.json
+++ b/packages/paper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@svelte-material-ui/paper",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.5",
   "description": "Svelte Material UI - Paper",
   "keywords": [
     "svelte",
@@ -27,11 +27,11 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@svelte-material-ui/common": "^1.0.0-beta.3",
     "@material/elevation": "^3.1.0",
     "@material/feature-targeting": "^3.1.0",
     "@material/shape": "^3.1.0",
     "@material/theme": "^3.1.0",
-    "@material/typography": "^3.1.0"
+    "@material/typography": "^3.1.0",
+    "@svelte-material-ui/common": "^1.0.0-beta.5"
   }
 }
