--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@svelte-material-ui/select",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.5",
   "description": "Svelte Material UI - Select",
   "keywords": [
     "svelte",
@@ -27,15 +27,15 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@svelte-material-ui/common": "^1.0.0-beta.3",
-    "@material/select": "^3.1.0",
     "@material/feature-targeting": "^3.1.0",
-    "@material/rtl": "^3.1.0",
     "@material/ripple": "^3.1.0",
-    "@svelte-material-ui/floating-label": "^1.0.0-beta.3",
-    "@svelte-material-ui/line-ripple": "^1.0.0-beta.3",
-    "@svelte-material-ui/notched-outline": "^1.0.0-beta.3",
-    "@svelte-material-ui/list": "^1.0.0-beta.3",
-    "@svelte-material-ui/menu": "^1.0.0-beta.3"
+    "@material/rtl": "^3.1.0",
+    "@material/select": "^3.1.0",
+    "@svelte-material-ui/common": "^1.0.0-beta.5",
+    "@svelte-material-ui/floating-label": "^1.0.0-beta.5",
+    "@svelte-material-ui/line-ripple": "^1.0.0-beta.5",
+    "@svelte-material-ui/list": "^1.0.0-beta.5",
+    "@svelte-material-ui/menu": "^1.0.0-beta.5",
+    "@svelte-material-ui/notched-outline": "^1.0.0-beta.5"
   }
 }
