--- a/packages/tab-scroller/package.json
+++ b/packages/tab-scroller/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@svelte-material-ui/tab-scroller",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.5",
   "description": "Svelte Material UI - Tab Scroller",
   "keywords": [
     "svelte",
@@ -27,7 +27,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@svelte-material-ui/common": "^1.0.0-beta.3",
-    "@material/tab-scroller": "^3.1.0"
+    "@material/tab-scroller": "^3.1.0",
+    "@svelte-material-ui/common": "^1.0.0-beta.5"
   }
 }
