--- a/packages/top-app-bar/package.json
+++ b/packages/top-app-bar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@svelte-material-ui/top-app-bar",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.5",
   "description": "Svelte Material UI - Top App Bar",
   "keywords": [
     "svelte",
@@ -27,8 +27,8 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@svelte-material-ui/common": "^1.0.0-beta.3",
+    "@material/feature-targeting": "^3.1.0",
     "@material/top-app-bar": "^3.1.0",
-    "@material/feature-targeting": "^3.1.0"
+    "@svelte-material-ui/common": "^1.0.0-beta.5"
   }
 }
