Update packages and fix FAB demo.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,38 @@
     "style-loader": "^1.0.0",
     "svelte": "^3.9.0",
     "svelte-loader": "^2.13.6",
-    "svelte-material-ui": "file:../svelte-material-ui",
+    "@svelte-material-ui/button": "file:../svelte-material-ui/packages/button",
+    "@svelte-material-ui/card": "file:../svelte-material-ui/packages/card",
+    "@svelte-material-ui/checkbox": "file:../svelte-material-ui/packages/checkbox",
+    "@svelte-material-ui/chips": "file:../svelte-material-ui/packages/chips",
+    "@svelte-material-ui/common": "file:../svelte-material-ui/packages/common",
+    "@svelte-material-ui/data-table": "file:../svelte-material-ui/packages/data-table",
+    "@svelte-material-ui/dialog": "file:../svelte-material-ui/packages/dialog",
+    "@svelte-material-ui/drawer": "file:../svelte-material-ui/packages/drawer",
+    "@svelte-material-ui/fab": "file:../svelte-material-ui/packages/fab",
+    "@svelte-material-ui/floating-label": "file:../svelte-material-ui/packages/floating-label",
+    "@svelte-material-ui/form-field": "file:../svelte-material-ui/packages/form-field",
+    "@svelte-material-ui/icon-button": "file:../svelte-material-ui/packages/icon-button",
+    "@svelte-material-ui/image-list": "file:../svelte-material-ui/packages/image-list",
+    "@svelte-material-ui/line-ripple": "file:../svelte-material-ui/packages/line-ripple",
+    "@svelte-material-ui/linear-progress": "file:../svelte-material-ui/packages/linear-progress",
+    "@svelte-material-ui/list": "file:../svelte-material-ui/packages/list",
+    "@svelte-material-ui/menu": "file:../svelte-material-ui/packages/menu",
+    "@svelte-material-ui/menu-surface": "file:../svelte-material-ui/packages/menu-surface",
+    "@svelte-material-ui/notched-outline": "file:../svelte-material-ui/packages/notched-outline",
+    "@svelte-material-ui/paper": "file:../svelte-material-ui/packages/paper",
+    "@svelte-material-ui/radio": "file:../svelte-material-ui/packages/radio",
+    "@svelte-material-ui/ripple": "file:../svelte-material-ui/packages/ripple",
+    "@svelte-material-ui/select": "file:../svelte-material-ui/packages/select",
+    "@svelte-material-ui/slider": "file:../svelte-material-ui/packages/slider",
+    "@svelte-material-ui/snackbar": "file:../svelte-material-ui/packages/snackbar",
+    "@svelte-material-ui/switch": "file:../svelte-material-ui/packages/switch",
+    "@svelte-material-ui/tab": "file:../svelte-material-ui/packages/tab",
+    "@svelte-material-ui/tab-bar": "file:../svelte-material-ui/packages/tab-bar",
+    "@svelte-material-ui/tab-indicator": "file:../svelte-material-ui/packages/tab-indicator",
+    "@svelte-material-ui/tab-scroller": "file:../svelte-material-ui/packages/tab-scroller",
+    "@svelte-material-ui/textfield": "file:../svelte-material-ui/packages/textfield",
+    "@svelte-material-ui/top-app-bar": "file:../svelte-material-ui/packages/top-app-bar/",
     "svelte-spa-router": "^1.2.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
