--- a/packages/form-field/package.json
+++ b/packages/form-field/package.json
@@ -27,7 +27,9 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@material/feature-targeting": "^3.1.0",
     "@material/form-field": "^3.1.0",
+    "@material/rtl": "^3.1.0",
     "@svelte-material-ui/common": "^1.0.0-beta.6"
   }
 }
