chore: fix site config

--- a/site/package.json
+++ b/site/package.json
@@ -4,7 +4,7 @@
   "description": "SMUI Demo",
   "scripts": {
     "build": "webpack",
-    "serve": "serve .",
+    "serve": "serve ..",
     "watch": "webpack --watch",
     "pages": "git checkout gh-pages && git pull && git reset --hard HEAD^ && git rebase master && npm run build && git add . && git commit -m 'Update build files.' && git push --force origin gh-pages && git checkout master",
     "test": "echo \"Error: no test specified\" && exit 1"
