chore: add site icons and a Twitter link

--- a/site/package.json
+++ b/site/package.json
@@ -21,16 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^7.3.1",
-    "serve": "^11.1.0",
-    "style-loader": "^1.0.0",
-    "svelte": "^3.9.0",
-    "svelte-loader": "^2.13.6",
+    "@mdi/js": "^4.2.95",
     "@svelte-material-ui/button": "file:../packages/button",
     "@svelte-material-ui/card": "file:../packages/card",
     "@svelte-material-ui/checkbox": "file:../packages/checkbox",
@@ -63,6 +54,16 @@
     "@svelte-material-ui/tab-scroller": "file:../packages/tab-scroller",
     "@svelte-material-ui/textfield": "file:../packages/textfield",
     "@svelte-material-ui/top-app-bar": "file:../packages/top-app-bar/",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "sass-loader": "^7.3.1",
+    "serve": "^11.1.0",
+    "style-loader": "^1.0.0",
+    "svelte": "^3.9.0",
+    "svelte-loader": "^2.13.6",
     "svelte-spa-router": "^1.2.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
