--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "commitmsg": "commitlint -e $GIT_PARAMS",
-    "pages": "git checkout site && git pull && git rebase master && cd site && npm run build && cd .. && git add . && git commit -m 'chore: update built files' && git push origin $(git subtree split --prefix site site):gh-pages --force && git reset --hard HEAD^ && git push --force origin site && git checkout master",
+    "pages": "git checkout site && git rebase master && cd site && npm run build && cd .. && git add . && git commit -m 'chore: update built files' && git push origin $(git subtree split --prefix site site):gh-pages --force && git reset --hard HEAD^ && git push --force origin site && git checkout master",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "commitlint": {
