--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -30,6 +30,7 @@
     "@material/button": "^3.1.0",
     "@material/elevation": "^3.1.0",
     "@material/feature-targeting": "^3.1.0",
-    "@smui/common": "^1.0.0-beta.8"
+    "@smui/common": "^1.0.0-beta.8",
+    "@smui/ripple": "^1.0.0-beta.9"
   }
 }
