--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -30,6 +30,7 @@
     "@material/card": "^3.1.0",
     "@smui/button": "^1.0.0-beta.9",
     "@smui/common": "^1.0.0-beta.8",
-    "@smui/icon-button": "^1.0.0-beta.9"
+    "@smui/icon-button": "^1.0.0-beta.9",
+    "@smui/ripple": "^1.0.0-beta.9"
   }
 }
