--- a/packages/fab/package.json
+++ b/packages/fab/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@material/fab": "^3.1.0",
     "@material/feature-targeting": "^3.1.0",
-    "@smui/common": "^1.0.0-beta.8"
+    "@smui/common": "^1.0.0-beta.8",
+    "@smui/ripple": "^1.0.0-beta.9"
   }
 }
