--- a/packages/list/package.json
+++ b/packages/list/package.json
@@ -28,6 +28,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/list": "^3.1.0",
-    "@smui/common": "^1.0.0-beta.8"
+    "@smui/common": "^1.0.0-beta.8",
+    "@smui/ripple": "^1.0.0-beta.9"
   }
 }
