--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@material/menu": "^3.1.0",
     "@smui/common": "^1.0.0-beta.8",
+    "@smui/list": "^1.0.0-beta.9",
     "@smui/menu-surface": "^1.0.0-beta.9"
   }
 }
