feat: provide bare js and css (button only for test) for use in REPL

--- a/package.json
+++ b/package.json
@@ -22,7 +22,37 @@
     ]
   },
   "files": [
-    "logo.svg"
+    "button.js",
+    "card.js",
+    "checkbox.js",
+    "chips.js",
+    "data-table.js",
+    "dialog.js",
+    "drawer.js",
+    "fab.js",
+    "floating-label.js",
+    "form-field.js",
+    "icon-button.js",
+    "image-list.js",
+    "line-ripple.js",
+    "linear-progress.js",
+    "list.js",
+    "menu.js",
+    "menu-surface.js",
+    "notched-outline.js",
+    "paper.js",
+    "radio.js",
+    "ripple.js",
+    "select.js",
+    "slider.js",
+    "snackbar.js",
+    "switch.js",
+    "tab.js",
+    "tab-bar.js",
+    "tab-indicator.js",
+    "tab-scroller.js",
+    "textfield.js",
+    "top-app-bar.js"
   ],
   "repository": {
     "type": "git",
