--- a/site/package.json
+++ b/site/package.json
@@ -59,12 +59,12 @@
     "@smui/top-app-bar": "file:../packages/top-app-bar/",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "cssnano": "^4.1.10",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
     "serve": "^11.1.0",
-    "style-loader": "^1.0.0",
     "svelte": "^3.9.1",
     "svelte-loader": "^2.13.6",
     "svelte-spa-router": "^1.2.0",
