--- a/packages/snackbar/package.json
+++ b/packages/snackbar/package.json
@@ -35,6 +35,7 @@
     "@smui/icon-button": "^1.0.0-beta.13"
   },
   "devDependencies": {
+    "glob-cmd": "0.0.7",
     "sass": "^1.23.0-module.beta.1"
   }
 }
