--- a/packages/list/package.json
+++ b/packages/list/package.json
@@ -28,6 +28,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@material/feature-targeting": "^3.1.0",
     "@material/list": "^3.1.0",
     "@smui/common": "^1.0.0-beta.15",
     "@smui/ripple": "^1.0.0-beta.16"
