--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -28,7 +28,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/card": "^3.1.0",
+    "@material/card": "^3.2.0",
     "@smui/button": "^1.0.0-beta.16",
     "@smui/common": "^1.0.0-beta.15",
     "@smui/icon-button": "^1.0.0-beta.16",
@@ -36,6 +36,6 @@
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.23.0-module.beta.1"
+    "sass": "^1.23.1"
   }
 }
