--- a/packages/fab/package.json
+++ b/packages/fab/package.json
@@ -28,13 +28,13 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/fab": "^3.1.0",
+    "@material/fab": "^3.2.0",
     "@material/feature-targeting": "^3.1.0",
     "@smui/common": "^1.0.0-beta.15",
     "@smui/ripple": "^1.0.0-beta.16"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.23.0-module.beta.1"
+    "sass": "^1.23.1"
   }
 }
