--- a/packages/form-field/package.json
+++ b/packages/form-field/package.json
@@ -29,12 +29,12 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/feature-targeting": "^3.1.0",
-    "@material/form-field": "^3.1.0",
-    "@material/rtl": "^3.1.0",
+    "@material/form-field": "^3.2.0",
+    "@material/rtl": "^3.2.0",
     "@smui/common": "^1.0.0-beta.15"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.23.0-module.beta.1"
+    "sass": "^1.23.1"
   }
 }
