--- a/packages/menu-surface/package.json
+++ b/packages/menu-surface/package.json
@@ -28,11 +28,11 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/menu-surface": "^3.1.0",
+    "@material/menu-surface": "^3.2.0",
     "@smui/common": "^1.0.0-beta.15"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.23.0-module.beta.1"
+    "sass": "^1.23.1"
   }
 }
