--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -28,13 +28,13 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/menu": "^3.1.0",
+    "@material/menu": "^3.2.0",
     "@smui/common": "^1.0.0-beta.15",
     "@smui/list": "^1.0.0-beta.16",
     "@smui/menu-surface": "^1.0.0-beta.16"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.23.0-module.beta.1"
+    "sass": "^1.23.1"
   }
 }
