--- a/packages/ripple/package.json
+++ b/packages/ripple/package.json
@@ -28,10 +28,10 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/ripple": "^3.1.0"
+    "@material/ripple": "^3.2.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.23.0-module.beta.1"
+    "sass": "^1.23.1"
   }
 }
