--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -29,9 +29,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/feature-targeting": "^3.1.0",
-    "@material/ripple": "^3.1.0",
-    "@material/rtl": "^3.1.0",
-    "@material/select": "^3.1.0",
+    "@material/ripple": "^3.2.0",
+    "@material/rtl": "^3.2.0",
+    "@material/select": "^3.2.0",
     "@smui/common": "^1.0.0-beta.15",
     "@smui/floating-label": "^1.0.0-beta.16",
     "@smui/line-ripple": "^1.0.0-beta.16",
@@ -41,6 +41,6 @@
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.23.0-module.beta.1"
+    "sass": "^1.23.1"
   }
 }
