--- a/packages/snackbar/package.json
+++ b/packages/snackbar/package.json
@@ -29,13 +29,13 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/feature-targeting": "^3.1.0",
-    "@material/snackbar": "^3.1.0",
+    "@material/snackbar": "^3.2.0",
     "@smui/button": "^1.0.0-beta.16",
     "@smui/common": "^1.0.0-beta.15",
     "@smui/icon-button": "^1.0.0-beta.16"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.23.0-module.beta.1"
+    "sass": "^1.23.1"
   }
 }
