--- a/packages/tab-bar/package.json
+++ b/packages/tab-bar/package.json
@@ -28,12 +28,12 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/tab-bar": "^3.1.0",
+    "@material/tab-bar": "^3.2.0",
     "@smui/common": "^1.0.0-beta.15",
     "@smui/tab-scroller": "^1.0.0-beta.16"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.23.0-module.beta.1"
+    "sass": "^1.23.1"
   }
 }
