--- a/packages/top-app-bar/package.json
+++ b/packages/top-app-bar/package.json
@@ -29,11 +29,11 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/feature-targeting": "^3.1.0",
-    "@material/top-app-bar": "^3.1.0",
+    "@material/top-app-bar": "^3.2.0",
     "@smui/common": "^1.0.0-beta.15"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.23.0-module.beta.1"
+    "sass": "^1.23.1"
   }
 }
