--- a/packages/floating-label/package.json
+++ b/packages/floating-label/package.json
@@ -12,7 +12,7 @@
     "sveltejs"
   ],
   "scripts": {
-    "prepare": "echo \"$(glob '**/node_modules' | lam -s '-I ' - | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass",
+    "prepare": "echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
