--- a/packages/icon-button/package.json
+++ b/packages/icon-button/package.json
@@ -28,6 +28,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@material/density": "^4.0.0",
     "@material/icon-button": "^4.0.0",
     "@smui/common": "^1.0.0",
     "@smui/ripple": "^1.1.0"
