--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -28,6 +28,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@material/density": "^4.0.0",
     "@material/switch": "^4.0.0",
     "@smui/common": "^1.0.0"
   },
