--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/button",
-  "version": "1.1.0",
+  "version": "2.0.0-alpha.0",
   "description": "Svelte Material UI - Button",
   "keywords": [
     "svelte",
@@ -31,8 +31,8 @@
     "@material/button": "^4.0.0",
     "@material/elevation": "^4.0.0",
     "@material/feature-targeting": "^4.0.0",
-    "@smui/common": "^1.0.0",
-    "@smui/ripple": "^1.1.0"
+    "@smui/common": "^2.0.0-alpha.0",
+    "@smui/ripple": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
