--- a/packages/icon-button/package.json
+++ b/packages/icon-button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/icon-button",
-  "version": "1.1.0",
+  "version": "2.0.0-alpha.0",
   "description": "Svelte Material UI - Icon Button",
   "keywords": [
     "svelte",
@@ -30,8 +30,8 @@
   "dependencies": {
     "@material/density": "^4.0.0",
     "@material/icon-button": "^4.0.0",
-    "@smui/common": "^1.0.0",
-    "@smui/ripple": "^1.1.0"
+    "@smui/common": "^2.0.0-alpha.0",
+    "@smui/ripple": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
