--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/select",
-  "version": "1.1.0",
+  "version": "2.0.0-alpha.0",
   "description": "Svelte Material UI - Select",
   "keywords": [
     "svelte",
@@ -32,12 +32,12 @@
     "@material/ripple": "^4.0.0",
     "@material/rtl": "^4.0.0",
     "@material/select": "^4.0.0",
-    "@smui/common": "^1.0.0",
-    "@smui/floating-label": "^1.1.0",
-    "@smui/line-ripple": "^1.1.0",
-    "@smui/list": "^1.1.0",
-    "@smui/menu": "^1.1.0",
-    "@smui/notched-outline": "^1.1.0"
+    "@smui/common": "^2.0.0-alpha.0",
+    "@smui/floating-label": "^2.0.0-alpha.0",
+    "@smui/line-ripple": "^2.0.0-alpha.0",
+    "@smui/list": "^2.0.0-alpha.0",
+    "@smui/menu": "^2.0.0-alpha.0",
+    "@smui/notched-outline": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
