--- a/packages/tab-indicator/package.json
+++ b/packages/tab-indicator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/tab-indicator",
-  "version": "1.1.0",
+  "version": "2.0.0-alpha.0",
   "description": "Svelte Material UI - Tab Indicator",
   "keywords": [
     "svelte",
@@ -29,7 +29,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/tab-indicator": "^4.0.0",
-    "@smui/common": "^1.0.0"
+    "@smui/common": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
