chore: update main package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-material-ui",
-  "version": "1.1.0",
+  "version": "2.0.0-alpha.0",
   "description": "Svelte Material UI Components",
   "keywords": [
     "svelte",
@@ -31,37 +31,37 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@smui/button": "1.1.0",
-    "@smui/card": "1.1.0",
-    "@smui/checkbox": "1.1.0",
-    "@smui/chips": "1.1.0",
-    "@smui/data-table": "1.1.0",
-    "@smui/dialog": "1.1.0",
-    "@smui/drawer": "1.1.0",
-    "@smui/fab": "1.1.0",
-    "@smui/floating-label": "1.1.0",
-    "@smui/form-field": "1.1.0",
-    "@smui/icon-button": "1.1.0",
-    "@smui/image-list": "1.1.0",
-    "@smui/line-ripple": "1.1.0",
-    "@smui/linear-progress": "1.1.0",
-    "@smui/list": "1.1.0",
-    "@smui/menu": "1.1.0",
-    "@smui/menu-surface": "1.1.0",
-    "@smui/notched-outline": "1.1.0",
-    "@smui/paper": "1.1.0",
-    "@smui/radio": "1.1.0",
-    "@smui/ripple": "1.1.0",
-    "@smui/select": "1.1.0",
-    "@smui/slider": "1.1.0",
-    "@smui/snackbar": "1.1.0",
-    "@smui/switch": "1.1.0",
-    "@smui/tab": "1.1.0",
-    "@smui/tab-bar": "1.1.0",
-    "@smui/tab-indicator": "1.1.0",
-    "@smui/tab-scroller": "1.1.0",
-    "@smui/textfield": "1.1.0",
-    "@smui/top-app-bar": "1.1.0"
+    "@smui/button": "2.0.0-alpha.0",
+    "@smui/card": "2.0.0-alpha.0",
+    "@smui/checkbox": "2.0.0-alpha.0",
+    "@smui/chips": "2.0.0-alpha.0",
+    "@smui/data-table": "2.0.0-alpha.0",
+    "@smui/dialog": "2.0.0-alpha.0",
+    "@smui/drawer": "2.0.0-alpha.0",
+    "@smui/fab": "2.0.0-alpha.0",
+    "@smui/floating-label": "2.0.0-alpha.0",
+    "@smui/form-field": "2.0.0-alpha.0",
+    "@smui/icon-button": "2.0.0-alpha.0",
+    "@smui/image-list": "2.0.0-alpha.0",
+    "@smui/line-ripple": "2.0.0-alpha.0",
+    "@smui/linear-progress": "2.0.0-alpha.0",
+    "@smui/list": "2.0.0-alpha.0",
+    "@smui/menu": "2.0.0-alpha.0",
+    "@smui/menu-surface": "2.0.0-alpha.0",
+    "@smui/notched-outline": "2.0.0-alpha.0",
+    "@smui/paper": "2.0.0-alpha.0",
+    "@smui/radio": "2.0.0-alpha.0",
+    "@smui/ripple": "2.0.0-alpha.0",
+    "@smui/select": "2.0.0-alpha.0",
+    "@smui/slider": "2.0.0-alpha.0",
+    "@smui/snackbar": "2.0.0-alpha.0",
+    "@smui/switch": "2.0.0-alpha.0",
+    "@smui/tab": "2.0.0-alpha.0",
+    "@smui/tab-bar": "2.0.0-alpha.0",
+    "@smui/tab-indicator": "2.0.0-alpha.0",
+    "@smui/tab-scroller": "2.0.0-alpha.0",
+    "@smui/textfield": "2.0.0-alpha.0",
+    "@smui/top-app-bar": "2.0.0-alpha.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
