--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/card",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0-beta.0",
   "description": "Svelte Material UI - Card",
   "keywords": [
     "svelte",
@@ -29,10 +29,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/card": "^4.0.0",
-    "@smui/button": "^2.0.0-alpha.0",
-    "@smui/common": "^2.0.0-alpha.0",
-    "@smui/icon-button": "^2.0.0-alpha.0",
-    "@smui/ripple": "^2.0.0-alpha.0"
+    "@smui/button": "^2.0.0-beta.0",
+    "@smui/common": "^2.0.0-beta.0",
+    "@smui/icon-button": "^2.0.0-beta.0",
+    "@smui/ripple": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
