--- a/packages/paper/package.json
+++ b/packages/paper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/paper",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0-beta.0",
   "description": "Svelte Material UI - Paper",
   "keywords": [
     "svelte",
@@ -33,7 +33,7 @@
     "@material/shape": "^4.0.0",
     "@material/theme": "^4.0.0",
     "@material/typography": "^4.0.0",
-    "@smui/common": "^2.0.0-alpha.0"
+    "@smui/common": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
