--- a/packages/radio/package.json
+++ b/packages/radio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/radio",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0-beta.0",
   "description": "Svelte Material UI - Radio",
   "keywords": [
     "svelte",
@@ -29,7 +29,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/radio": "^4.0.0",
-    "@smui/common": "^2.0.0-alpha.0"
+    "@smui/common": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
