--- a/packages/ripple/package.json
+++ b/packages/ripple/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/ripple",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0-beta.0",
   "description": "Svelte Material UI - Ripple",
   "keywords": [
     "svelte",
