--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smui/switch",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0-beta.0",
   "description": "Svelte Material UI - Switch",
   "keywords": [
     "svelte",
@@ -30,7 +30,7 @@
   "dependencies": {
     "@material/density": "^4.0.0",
     "@material/switch": "^4.0.0",
-    "@smui/common": "^2.0.0-alpha.0"
+    "@smui/common": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
