feat: upgrade upstream MDC components to v10
This will break everything, so at this point, master becomes unusable, until I fix everything.

BREAKING CHANGE: Upgrading to v10 of upstream components. Their APIs will change. View the component READMEs.

--- a/packages/data-table/package.json
+++ b/packages/data-table/package.json
@@ -12,7 +12,7 @@
     "sveltejs"
   ],
   "scripts": {
-    "prepare": "echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass",
+    "#prepare": "echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
@@ -28,12 +28,12 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/data-table": "^4.0.0",
+    "@material/data-table": "^10.0.0",
     "@smui/checkbox": "^2.0.0-beta.1",
     "@smui/common": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.30.0"
+    "sass": "^1.32.8"
   }
 }
