--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -12,7 +12,7 @@
     "sveltejs"
   ],
   "scripts": {
-    "prepare": "echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass",
+    "#prepare": "echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
@@ -28,7 +28,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/card": "^4.0.0",
+    "@material/card": "^10.0.0",
     "@smui/button": "^2.0.0-beta.1",
     "@smui/common": "^2.0.0-beta.1",
     "@smui/icon-button": "^2.0.0-beta.1",
@@ -36,6 +36,6 @@
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.30.0"
+    "sass": "^1.32.8"
   }
 }
