--- a/packages/paper/package.json
+++ b/packages/paper/package.json
@@ -12,7 +12,7 @@
     "sveltejs"
   ],
   "scripts": {
-    "prepare": "echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass",
+    "#prepare": "echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
@@ -28,15 +28,15 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/elevation": "^4.0.0",
-    "@material/feature-targeting": "^4.0.0",
-    "@material/shape": "^4.0.0",
-    "@material/theme": "^4.0.0",
-    "@material/typography": "^4.0.0",
+    "@material/elevation": "^10.0.0",
+    "@material/feature-targeting": "^10.0.0",
+    "@material/shape": "^10.0.0",
+    "@material/theme": "^10.0.0",
+    "@material/typography": "^10.0.0",
     "@smui/common": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.30.0"
+    "sass": "^1.32.8"
   }
 }
