--- a/packages/ripple/package.json
+++ b/packages/ripple/package.json
@@ -12,7 +12,7 @@
     "sveltejs"
   ],
   "scripts": {
-    "prepare": "echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass",
+    "#prepare": "echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
@@ -28,10 +28,10 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/ripple": "^4.0.0"
+    "@material/ripple": "^10.0.0"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.30.0"
+    "sass": "^1.32.8"
   }
 }
