--- a/packages/snackbar/package.json
+++ b/packages/snackbar/package.json
@@ -12,7 +12,7 @@
     "sveltejs"
   ],
   "scripts": {
-    "prepublishOnly": "echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass && echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map kitchen/_style.scss kitchen/bare.css\" | xargs sass",
+    "#prepare": "echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map _style.scss bare.css\" | xargs sass && echo \"$(npx glob '**/*' | sed 's/^/-I /' | paste -s -d ' ' -) --no-source-map kitchen/_style.scss kitchen/bare.css\" | xargs sass",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "publishConfig": {
@@ -28,14 +28,14 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/feature-targeting": "^4.0.0",
-    "@material/snackbar": "^4.0.0",
+    "@material/feature-targeting": "^10.0.0",
+    "@material/snackbar": "^10.0.0",
     "@smui/button": "^2.0.0-beta.1",
     "@smui/common": "^2.0.0-beta.1",
     "@smui/icon-button": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
-    "sass": "^1.30.0"
+    "sass": "^1.32.8"
   }
 }
