--- a/packages/form-field/package.json
+++ b/packages/form-field/package.json
@@ -31,7 +31,7 @@
     "@material/feature-targeting": "^10.0.0",
     "@material/form-field": "^10.0.0",
     "@material/rtl": "^10.0.0",
-    "@smui/common": "^2.0.0-beta.1"
+    "@smui/common": "file:../common"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
