--- a/packages/list/package.json
+++ b/packages/list/package.json
@@ -30,8 +30,8 @@
   "dependencies": {
     "@material/feature-targeting": "^10.0.0",
     "@material/list": "^10.0.0",
-    "@smui/common": "^2.0.0-beta.1",
-    "@smui/ripple": "^2.0.0-beta.1"
+    "@smui/common": "file:../common",
+    "@smui/ripple": "file:../ripple"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
