--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -29,9 +29,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/menu": "^10.0.0",
-    "@smui/common": "^2.0.0-beta.1",
-    "@smui/list": "^2.0.0-beta.1",
-    "@smui/menu-surface": "^2.0.0-beta.1"
+    "@smui/common": "file:../common",
+    "@smui/list": "file:../list",
+    "@smui/menu-surface": "file:../menu-surface"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
