--- a/packages/notched-outline/package.json
+++ b/packages/notched-outline/package.json
@@ -29,7 +29,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/notched-outline": "^10.0.0",
-    "@smui/common": "^2.0.0-beta.1"
+    "@smui/common": "file:../common"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
