--- a/packages/snackbar/package.json
+++ b/packages/snackbar/package.json
@@ -30,9 +30,9 @@
   "dependencies": {
     "@material/feature-targeting": "^10.0.0",
     "@material/snackbar": "^10.0.0",
-    "@smui/button": "^2.0.0-beta.1",
-    "@smui/common": "^2.0.0-beta.1",
-    "@smui/icon-button": "^2.0.0-beta.1"
+    "@smui/button": "file:../button",
+    "@smui/common": "file:../common",
+    "@smui/icon-button": "file:../icon-button"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
