feat: updated Drawer for MDC v10

--- a/packages/drawer/package.json
+++ b/packages/drawer/package.json
@@ -28,6 +28,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@material/dom": "^10.0.0",
     "@material/drawer": "^10.0.0",
     "@smui/common": "file:../common"
   },
