--- a/site/package.json
+++ b/site/package.json
@@ -29,9 +29,15 @@
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
     "@babel/runtime": "^7.13.10",
+    "@material/button": "^10.0.0",
+    "@material/drawer": "^10.0.0",
     "@material/elevation": "^10.0.0",
+    "@material/icon-button": "^10.0.0",
     "@material/linear-progress": "^10.0.0",
+    "@material/menu": "^10.0.0",
+    "@material/shape": "^10.0.0",
     "@material/theme": "^10.0.0",
+    "@material/top-app-bar": "^10.0.0",
     "@material/typography": "^10.0.0",
     "@mdi/js": "^5.9.55",
     "@rollup/plugin-babel": "^5.0.0",
@@ -70,11 +76,12 @@
     "@smui/tab-indicator": "file:../packages/tab-indicator",
     "@smui/tab-scroller": "file:../packages/tab-scroller",
     "@smui/textfield": "file:../packages/textfield",
-    "@smui/top-app-bar": "file:../packages/top-app-bar/",
+    "@smui/top-app-bar": "file:../packages/top-app-bar",
     "npm-run-all": "^4.1.5",
+    "postcss-scss": "^3.0.5",
     "rollup": "^2.44.0",
     "rollup-plugin-alias": "^2.2.0",
-    "rollup-plugin-scss": "^2.6.1",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "sapper": "^0.29.1",
