--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -29,10 +29,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/card": "^10.0.0",
-    "@smui/button": "file:../button",
-    "@smui/common": "file:../common",
-    "@smui/icon-button": "file:../icon-button",
-    "@smui/ripple": "file:../ripple"
+    "@smui/button": "^2.0.0-beta.1",
+    "@smui/common": "^2.0.0-beta.1",
+    "@smui/icon-button": "^2.0.0-beta.1",
+    "@smui/ripple": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
