--- a/packages/chips/package.json
+++ b/packages/chips/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "@material/chips": "^10.0.0",
     "@material/rtl": "^10.0.0",
-    "@smui/common": "file:../common"
+    "@smui/common": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
