--- a/packages/data-table/package.json
+++ b/packages/data-table/package.json
@@ -29,8 +29,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/data-table": "^10.0.0",
-    "@smui/checkbox": "file:../checkbox",
-    "@smui/common": "file:../common"
+    "@smui/checkbox": "^2.0.0-beta.1",
+    "@smui/common": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
