--- a/packages/paper/package.json
+++ b/packages/paper/package.json
@@ -33,7 +33,7 @@
     "@material/shape": "^10.0.0",
     "@material/theme": "^10.0.0",
     "@material/typography": "^10.0.0",
-    "@smui/common": "file:../common"
+    "@smui/common": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
