--- a/packages/select/package.json
+++ b/packages/select/package.json
@@ -33,12 +33,12 @@
     "@material/rtl": "^10.0.0",
     "@material/select": "^10.0.0",
     "@material/theme": "^10.0.0",
-    "@smui/common": "file:../common",
-    "@smui/floating-label": "file:../floating-label",
-    "@smui/line-ripple": "file:../line-ripple",
-    "@smui/list": "file:../list",
-    "@smui/menu": "file:../menu",
-    "@smui/notched-outline": "file:../notched-outline"
+    "@smui/common": "^2.0.0-beta.1",
+    "@smui/floating-label": "^2.0.0-beta.1",
+    "@smui/line-ripple": "^2.0.0-beta.1",
+    "@smui/list": "^2.0.0-beta.1",
+    "@smui/menu": "^2.0.0-beta.1",
+    "@smui/notched-outline": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
