--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "@material/density": "^10.0.0",
     "@material/switch": "^10.0.0",
-    "@smui/common": "file:../common"
+    "@smui/common": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "glob-cmd": "0.0.7",
