docs: go back to aliases for site rollup config

--- a/site/package.json
+++ b/site/package.json
@@ -76,6 +76,7 @@
     "@material/touch-target": "^10.0.0",
     "@material/typography": "^10.0.0",
     "@mdi/js": "^5.9.55",
+    "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
@@ -116,7 +117,6 @@
     "npm-run-all": "^4.1.5",
     "postcss-scss": "^3.0.5",
     "rollup": "^2.44.0",
-    "rollup-plugin-alias": "^2.2.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
